<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codility.textspeech.MainActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/applicant_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ll"
        android:padding="10dp"
        android:text="@string/app_info"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tvHeader"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:hint="@string/text_hint"
        android:maxLines="5"
        android:padding="20dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorAccent"
        tools:ignore="Deprecated" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btSpeech"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/btn_info"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btSpeech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/btn_background"
        android:text="@string/speak_out"
        android:onClick="speakOutView"
        android:textColor="@android:color/white"
        tools:ignore="OnClick" />

</RelativeLayout>
